Fix mobile spacing

--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -37,7 +37,7 @@
     width: 2em;
     height: 2em;
     border-radius: 50px;
-    margin: -0.75em 1rem;
+    margin: -0.75em 0.5rem;
     padding: 0;
   }
 }
